--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">Cmo</string>
 
-    <string name="app_title">Anime Quotes</string>
+    <string name="app_fragment_remote_quotes_title">Anime Quotes</string>
+    <string name="app_fragment_saved_quotes_title">Favorite Quotes</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
