--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,23 @@
 
     <string name="app_fragment_remote_quotes_title">Anime Quotes</string>
     <string name="app_fragment_saved_quotes_title">Favorite Quotes</string>
+    <string name="app_fragment_search_quotes_title">Search Quotes</string>
 
     <string name="app_menu_remote">Remote</string>
     <string name="app_menu_saved">Library</string>
     <string name="app_menu_search">Search</string>
+
+    <string name="app_fetching_progress_title">Hold on a moment !</string>
+    <string name="app_fetching_progress_subtitle">We are getting it for you 😁</string>
+    <string name="app_fetching_progress_empty">Looks like there is no data yet</string>
+    <string name="app_fetching_progress_error">Something went wrong</string>
+    <string name="app_fetching_progress_error_empty_query">Can not search for an empty query !</string>
+
+
+    <string name="app_refresh_fab_content_description">Refresh</string>
+
+    <string name="app_search_tip">Please enter \"anime\" or \"char\" followed by a space | e.g:anime Steins;Gate</string>
+    <string name="app_search_query_hint">anime/char: Detective Conan</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
